# WorkPlaces

./: .gitignore  .ogitignore  settings.json
Cxx/C/: CMakeLists.txt  README.txt
Cxx/C++/: README.txt
Cxx/C++/Prj1/: Demo.cpp
Cxx/C/DataStructure/: CMakeLists.txt  main.c
Cxx/C/DataStructure/DsLib/: CMakeLists.txt
Cxx/C/DataStructure/DsLib/Include/: BTree.h  LinkList.h  LinkQueue.h  LinkStack.h  SeqList.h  SeqQueue.h  SeqStack.h  SeqString.h  global_head.h  global_inc.h  global_var.h
Cxx/C/DataStructure/DsLib/src/: BTree.c  LinkList.c  LinkQueue.c  LinkStack.c  SeqList.c  SeqQueue.c  SeqStack.c  SeqString.c
Cxx/C/Demo/: CMakeLists.txt
Cxx/C/Demo/SubDemo/: CMakeLists.txt
Cxx/CMakeDemos/: .gitignore  .travis.yml
Cxx/CMakeDemos/01-basic/A-hello-cmake/: README.adoc
Cxx/CMakeDemos/01-basic/E-installing/: README.adoc
Cxx/CMakeDemos/01-basic/H-third-party-library/: README.adoc
Cxx/CMakeDemos/02-sub-projects/A-basic/: README.adoc
Cxx/CMakeDemos/04-static-analysis/clang-format/: .clang-format
Py/: Demo.py  Markdown.md  README.txt  requirements.txt
Py/BdNetpan/: GroupAuto.py
Py/Iris/: Iris.py  requirements.txt
Py/ML Stu/: Requirements.txt
Py/ML Stu/AndrewNg/ex1/: ex1.py  ex1data1.txt
Py/ML Stu/Iris/: Iris.py
Py/PaddleGAN-develop/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_cn.md  requirements.txt  setup.py
Py/PaddleGAN-develop/applications/tools/: animeganv2.py  face_parse.py  first-order-demo.py  image_restoration.py  lapstyle.py  pixel2style2pixel.py  styleganv2.py  styleganv2editing.py  styleganv2fitting.py  styleganv2mixing.py  test.py  video-enhance.py  wav2lip.py
Py/PaddleGAN-develop/benchmark/: README.md  analysis_log.py  benchmark.yaml  run_all.sh  run_benchmark.sh
Py/PaddleGAN-develop/configs/: animeganv2.yaml  animeganv2_pretrain.yaml  basicvsr++_reds.yaml  basicvsr_reds.yaml  cond_dcgan_mnist.yaml  cyclegan_cityscapes.yaml  cyclegan_horse2zebra.yaml  dcgan_mnist.yaml  drn_psnr_x4_div2k.yaml  edvr_l_blur_w_tsa.yaml  edvr_l_blur_wo_tsa.yaml  edvr_l_w_tsa.yaml  edvr_l_wo_tsa.yaml  edvr_m_w_tsa.yaml  edvr_m_wo_tsa.yaml  esrgan_psnr_x4_div2k.yaml  esrgan_x4_div2k.yaml  firstorder_fashion.yaml  firstorder_vox_256.yaml  firstorder_vox_mobile_256.yaml  iconvsr_reds.yaml  lapstyle_draft.yaml  lapstyle_rev_first.yaml  lapstyle_rev_second.yaml  lesrcnn_psnr_x4_div2k.yaml  makeup.yaml  mprnet_deblurring.yaml  pan_psnr_x4_div2k.yaml  pix2pix_cityscapes.yaml  pix2pix_cityscapes_2gpus.yaml  pix2pix_facades.yaml  realsr_bicubic_noise_x4_df2k.yaml  realsr_kernel_noise_x4_dped.yaml  starganv2_afhq.yaml  starganv2_celeba_hq.yaml  stylegan_v2_256_ffhq.yaml  ugatit_photo2cartoon.yaml  ugatit_selfie2anime_light.yaml  wav2lip.yaml  wav2lip_hq.yaml  (+1 more)
Py/PaddleGAN-develop/deploy/: export_model.md
Py/PaddleGAN-develop/deploy/lite/: README.md
Py/PaddleGAN-develop/docs/: luckydraw.md
Py/PaddleGAN-develop/docs/en_US/: config_doc.md  contribute.md  data_prepare.md  get_started.md  install.md
Py/PaddleGAN-develop/docs/zh_CN/: data_prepare.md  get_started.md  (+1 more)
Py/PaddleGAN-develop/education/: README.md  homework1.md  homework2.md  homework3.md  homework4.md  第二天作业.py
Py/PaddleGAN-develop/paddlegan-wechaty-demo/: README.md  requirements.txt
Py/PaddleGAN-develop/ppgan/: __init__.py  version.py
Py/PaddleGAN-develop/tools/: animegan_picmean.py  export_model.py  extract_weight.py  fom_infer.py  inference.py  main.py  psgan_infer.py
Py/Python/3.7.8/: LICENSE.txt  NEWS.txt
Py/Web/: main.py  requirements.txt
Py/WinAuto/: Auto.py  CV_and_PyAutoGUI.py  PyWinAuto_test.py  requirements.txt
Py/x4gl/: run.py  ssh_client.py
(+287 files in other folders)
